# LinkedScout

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  alerts.yaml  linkedscout.db  main.py  mise.toml  pyproject.toml
src/linkedscout/: __init__.py  __main__.py  cli.py  config.py
src/linkedscout/models/: __init__.py  job.py  search.py
src/linkedscout/scraper/: __init__.py  client.py  parser.py
src/linkedscout/services/: __init__.py  alert_service.py  job_service.py
src/linkedscout/storage/: __init__.py  json_store.py  sqlite_store.py
src/linkedscout/utils/: __init__.py  rate_limiter.py
tests/: __init__.py  conftest.py  test_beartype_validation.py  test_cli.py  test_models.py  test_parser_edge_cases.py  test_rate_limiter.py  test_scraper.py  test_services.py  test_storage.py
